--- a/barbearia-alura/style.css
+++ b/barbearia-alura/style.css
@@ -29,6 +29,11 @@ footer {
     
 }
 
+body {
+    font-family: 'Raleway', sans-serif;
+    background-image: linear-gradient(to bottom, #fefefe 35%, #888888 90%);
+}
+
 /* home page */
 .banner {
     display: block;
@@ -37,53 +42,105 @@ footer {
 }
 
 .principal {
-    background: gainsboro;
-    padding: 10px;
+    margin: 0 0 1em;
 }
 
-h2 {
+h2, h3 {
     text-align: center;
-    font-size: 28px;
+    font-size: 2em;
     font-weight: bold;
 
-    margin: 0 0 20px;
+    margin: 0 0 1em;
+    clear: left;
 }
 
-h3 {
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-    padding: 20px;
+.utensilios {
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
 }
 
-main p {
+section p {
     text-align: justify;
-    font-size: 18px;
+    margin: 0 0 1em;
 }
 
-em strong {
-    color: red
+section strong {
+    font-weight: bold;
+}
+
+section em {
+    font-style: italic;
+}
+
+.mapa {
+    padding: 3em 0;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.mapa-iframe {
+    width: 100%;
+    height: 300px;
+    border: none;
 }
 
 .beneficios {
-    margin: 20px 0;
+    padding: 3em 0;
+}
+
+.beneficios-conteudo {
+    width: 640px;
+    margin: 0 auto;
 }
 
 .beneficios-lista {
     display: inline-block;
     vertical-align: top;
-    font-size: 20px;
-    width: 30%;
-    margin: 0 16% 0 30px;
+    width: 40%;
 }
 
 .itens {
-    font-style: italic
+    line-height: 1.5;
+}
+
+.itens::before {
+    content: "★ ";
+}
+
+.itens:first-child {
+    font-weight: bold;
 }
 
 .beneficios-imagem {
-    width: 50%;
+    width: 60%;
 }
+
+.video-container {
+    padding-top: 20px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.video {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
+}
+
+.video iframe {
+    border: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
 
 /* produtos e contato */
 nav {
@@ -109,23 +166,6 @@ nav a {
 nav a:hover {
     color: #c4971c;
     font-size: 24px;
-}
-
-table {
-    margin: 20px 0 40px;
-    width: 52.5%;
-    text-align: center;
-}
-
-thead {
-    background-color: #555555;
-    color: #FFFFFF;
-    font-weight: bold;
-}
-
-td, th {
-    border: 1px solid #000000;
-    padding: 8px 15px;
 }
 
 .produtos {
@@ -162,16 +202,20 @@ td, th {
 }
 
 .produtos h2 {
-    font-size: 30px;
+    font-size: 2em;
     font-weight: bold;
 }
 
 .produtos li:hover h2 {
-    font-size: 35px;
+    font-size: 2.1em;
 }
 
 .produtos li:active h2 {
-    font-size: 30px;
+    font-size: 2em;
+}
+
+.produtos img {
+    width: 90%;
 }
 
 .produto-descricao {
@@ -182,6 +226,23 @@ td, th {
     font-size: 22px;
     font-weight: bold;
     margin-top: 10px;
+}
+
+table {
+    margin: 20px 0 40px;
+    width: 52.5%;
+    text-align: center;
+}
+
+thead {
+    background-color: #555555;
+    color: #FFFFFF;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
 }
 
 form {
@@ -232,4 +293,124 @@ select {
 
 .enviar:hover {
     background-color: #d48a00;
+}
+
+@media screen and (max-width: 600px) {
+
+    .container, main, .beneficios-conteudo, .video {
+        width: auto;
+    }
+
+    h1 img {
+        width: 80px;
+    }
+
+    h1, nav {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    nav li {
+        margin: 0 5px;
+    }
+
+    nav a {
+        font-size: 14px;
+        text-align: center;
+    }
+
+    main {
+        padding: 10px;
+    }
+
+    .principal, .mapa, .beneficios {
+        padding: 0;
+    }
+
+    .banner {
+        margin: 0;
+    }
+
+    h2, h3 {
+        margin: 30px 0;
+        font-size: 25px;
+    }
+
+    .mapa-iframe {
+        height: 150px;
+    }
+
+    .beneficios-lista, .beneficios-imagem {
+        width: 100%;
+    }
+
+    footer {
+        padding: 15px;
+    }
+
+    footer img {
+        width: 50px;
+    }
+
+    .copyright {
+        font-size: 8px;
+        margin: 10px;
+    }
+
+    .produtos {
+        width: 100%;
+        text-align: center;
+        padding: 0;
+    }
+
+    .produtos li {
+        display: block;
+        width: 80%;
+        margin: 20px auto;
+    }
+
+    .produtos h2 {
+        font-size: 1.5em;
+        margin: 10px 0;
+    }
+
+    .produtos li:hover h2 {
+        font-size: 1.6em;
+    }
+
+    .produto-descricao {
+        font-size: 1em;
+        padding-top: 20px;
+    }
+
+    .produto-preco {
+        font-size: 1.5em;
+    }
+
+    table {
+        width: 90%;
+        margin: 20px auto;
+    }
+
+    form > label {
+        margin-top: 20px;
+    }
+
+    form label {
+        font-size: 1em;
+    }
+
+    .input-padrao {
+        width: 90%;
+        margin: 5px 2px;
+    }
+
+    .enviar {
+        display: block;
+        width: 80%;
+        margin: 0 auto;
+    }
 }
